--- a/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -18,7 +18,7 @@
         </div>
         <img class="card-img-top imageThumbnail" src="@employee.PhotoPath" />
         <div class="card-footer text-center">
-            <a href="#" class="btn btn-primary">View</a>
+            <a href="@($"employeedetails/{employee.EmployeeId}")" class="btn btn-primary">View</a>
             <a href="#" class="btn btn-primary">Edit</a>
             <a href="#" class="btn btn-danger">Delete</a>
         </div>
