--- a/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -2,7 +2,8 @@
 @inherits EmployeeListBase
 
 <h3>Employee List</h3>
-
+<input type="checkbox" id="showFooter" @bind="ShowFooter"/>
+<label for="showFooter">show Footer</label> 
 <div class="card-deck">
     @if(Employees == null)
     {
@@ -12,17 +13,7 @@
     {
     @foreach(var employee in Employees)
     {
-    <div class="card m-3" style="min-width:18rem; max-width:30.5%;">
-        <div class="card-header">
-            <h3>@employee.FirstName @employee.LastName</h3>
-        </div>
-        <img class="card-img-top imageThumbnail" src="@employee.PhotoPath" />
-        <div class="card-footer text-center">
-            <a href="@($"employeedetails/{employee.EmployeeId}")" class="btn btn-primary">View</a>
-            <a href="#" class="btn btn-primary">Edit</a>
-            <a href="#" class="btn btn-danger">Delete</a>
-        </div>
-    </div>
+        <DisplayEmployee Employee="employee" ShowFooter="ShowFooter"></DisplayEmployee>
     }
     }
 
