--- a/EmployeeManagement.Web/Pages/DisplayEmployee.razor
+++ b/EmployeeManagement.Web/Pages/DisplayEmployee.razor
@@ -1,7 +1,10 @@
 ﻿@inherits DisplayEmployeeBase
 <div class="card m-3" style="min-width:18rem; max-width:30.5%;">
     <div class="card-header">
-        <h3>@Employee.FirstName @Employee.LastName</h3>
+        <h3>
+            <input type="checkbox" @onchange="CheckBoxChange" />
+            @Employee.FirstName @Employee.LastName
+        </h3>
     </div>
     <img class="card-img-top imageThumbnail" src="@Employee.PhotoPath" />
     @if (ShowFooter)
