--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -12,7 +12,8 @@
             <InputText id="firstName" class="form-control" placeholder="First Name"
                        @bind-Value="Employee.FirstName"></InputText>
         </div>
-
+    </div>
+    <div class="form-group row">
         <label for="lastName" class="col-sm-2 col-form-label">
             Last Name
         </label>
@@ -20,7 +21,8 @@
             <InputText id="lastName" class="form-control" placeholder="Last Name"
                        @bind-Value="Employee.LastName"></InputText>
         </div>
-
+    </div>
+    <div class="form-group row">
         <label for="email" class="col-sm-2 col-form-label">
             Email
         </label>
@@ -42,5 +44,18 @@
                 }
             </CustomInputSelect>
         </div>
-    </div> 
+    </div>
+    <div class="form-group row">
+        <label for="gender" class="col-sm-2 col-form-label">
+            Gender
+        </label>
+        <div class="col-sm-10">
+            <InputSelect id="gender" @bind-Value="Employee.Gender" class="form-control">
+                @foreach (var gender in Enum.GetValues(typeof(Gender)))
+                {
+                    <option value="@gender">@gender</option>
+                }
+            </InputSelect>
+        </div>
+    </div>
 </EditForm>
