--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -58,4 +58,12 @@
             </InputSelect>
         </div>
     </div>
+    <div class="form-group row">
+        <label for="gender" class="col-sm-2 col-form-label">
+            Date Of Birth
+        </label>
+        <div class="col-sm-10">
+            <InputDate @bind-Value="Employee.DateOfBirth" class="form-control"></InputDate>
+        </div>
+    </div>
 </EditForm>
