--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -2,7 +2,7 @@
 @inherits EditEmployeeBase
 
 <EditForm Model="@EditEmployeeModel" OnValidSubmit="HandleValidSubmit">
-    <DataAnnotationsValidator></DataAnnotationsValidator>
+    <ObjectGraphDataAnnotationsValidator></ObjectGraphDataAnnotationsValidator>
     <h3>Edit Employee</h3>
     <hr />
     <ValidationSummary></ValidationSummary>
@@ -81,6 +81,17 @@
         <div class="col-sm-10">
             <InputDate @bind-Value="EditEmployeeModel.DateOfBirth" class="form-control"></InputDate>
         </div>
+    </div>
+    <div class="form-group row">
+        <label for="departmentName" class="col-sm-2 col-form-label">
+            Department Name
+        </label>
+        <div class="col-sm-10">
+            <InputText id="departmentName" class="form-control" placeholder="Department Name"
+                       @bind-Value="EditEmployeeModel.Department.DepartmentName"></InputText>
+            <ValidationMessage For="@(() => EditEmployeeModel.Department.DepartmentName)"></ValidationMessage>
+        </div>
+
     </div>
     <button class="btn btn-primary" type="submit">Button</button>
 </EditForm>
