--- a/EmployeeManagement.Web/Shared/NavMenu.razor
+++ b/EmployeeManagement.Web/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/editemployee" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Create
+                <span class="oi oi-file" aria-hidden="true"></span> Create
             </NavLink>
         </li>
 
