--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -4,7 +4,7 @@
 
 <EditForm Model="@EditEmployeeModel" OnValidSubmit="HandleValidSubmit">
     <ObjectGraphDataAnnotationsValidator></ObjectGraphDataAnnotationsValidator>
-    <h3>Edit Employee</h3>
+    <h3>@PageHeaderText</h3>
     <hr />
     <ValidationSummary></ValidationSummary>
     <div class="form-group row">
@@ -83,7 +83,7 @@
             <InputDate @bind-Value="EditEmployeeModel.DateOfBirth" class="form-control"></InputDate>
         </div>
     </div>
-    <div class="form-group row">
+    @*<div class="form-group row">
         <label for="departmentName" class="col-sm-2 col-form-label">
             Department Name
         </label>
@@ -93,6 +93,6 @@
             <ValidationMessage For="@(() => EditEmployeeModel.Department.DepartmentName)"></ValidationMessage>
         </div>
 
-    </div>
+    </div>*@
     <button class="btn btn-primary" type="submit">Button</button>
 </EditForm>
