--- a/EmployeeManagement.Web/Shared/NavMenu.razor
+++ b/EmployeeManagement.Web/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/editemployee" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="/editemployee" Match="NavLinkMatch.All" @onclick="HandleClick">
                 <span class="oi oi-file" aria-hidden="true"></span> Create
             </NavLink>
         </li>
@@ -26,6 +26,13 @@
     private bool collapseNavMenu = true;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+
+    @inject NavigationManager NavigationManager;
+
+    private void HandleClick()
+    {
+        NavigationManager.NavigateTo("/editemployee", true);
+    }
 
     private void ToggleNavMenu()
     {
