--- a/EmployeeManagement.Web/Shared/NavMenu.razor
+++ b/EmployeeManagement.Web/Shared/NavMenu.razor
@@ -14,8 +14,14 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/editemployee" Match="NavLinkMatch.All" @onclick="HandleClick">
+            <NavLink class="nav-link" href="/editemployee" @onclick="HandleClick" Match="NavLinkMatch.All">
                 <span class="oi oi-file" aria-hidden="true"></span> Create
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/editemployee/2" Match="NavLinkMatch.All">
+                <span class="oi oi-pencil" aria-hidden="true"></span> Edit
             </NavLink>
         </li>
 
