--- a/EmployeeManagement.Web/Pages/EditEmployee.razor
+++ b/EmployeeManagement.Web/Pages/EditEmployee.razor
@@ -84,15 +84,19 @@
         </div>
     </div>
     @*<div class="form-group row">
-        <label for="departmentName" class="col-sm-2 col-form-label">
-            Department Name
-        </label>
-        <div class="col-sm-10">
-            <InputText id="departmentName" class="form-control" placeholder="Department Name"
-                       @bind-Value="EditEmployeeModel.Department.DepartmentName"></InputText>
-            <ValidationMessage For="@(() => EditEmployeeModel.Department.DepartmentName)"></ValidationMessage>
-        </div>
+            <label for="departmentName" class="col-sm-2 col-form-label">
+                Department Name
+            </label>
+            <div class="col-sm-10">
+                <InputText id="departmentName" class="form-control" placeholder="Department Name"
+                           @bind-Value="EditEmployeeModel.Department.DepartmentName"></InputText>
+                <ValidationMessage For="@(() => EditEmployeeModel.Department.DepartmentName)"></ValidationMessage>
+            </div>
 
-    </div>*@
+        </div>*@
     <button class="btn btn-primary" type="submit">Button</button>
+    @if (EditEmployeeModel.EmployeeId > 0)
+    {
+        <button class="btn btn-danger" type="button" @onclick="Delete_Click">Delete</button>
+    }
 </EditForm>
