--- a/EmployeeManagement.Web/Pages/DisplayEmployee.razor
+++ b/EmployeeManagement.Web/Pages/DisplayEmployee.razor
@@ -12,7 +12,7 @@
         <div class="card-footer text-center">
             <a href="@($"employeedetails/{Employee.EmployeeId}")" class="btn btn-primary">View</a>
             <a href="@($"editemployee/{Employee.EmployeeId}")" class="btn btn-primary">Edit</a>
-            <a href="#" class="btn btn-danger">Delete</a>
+            <button href="#" class="btn btn-danger" @onclick="Delete_Click">Delete</button>
         </div>
     }
 
