--- a/AKSB.Components/Confirm.razor
+++ b/AKSB.Components/Confirm.razor
@@ -1,23 +1,25 @@
 ﻿@inherits ConfirmBase
-@if (ShowConfirmation)
+@if (ShowConfirmation == true)
 {
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Confirm Delete</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Delete</button>
-                </div>
+<div class="modal fade show d-block" id="exampleModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">@ConfirmationTitle</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" 
+                        @onclick="() => OnConfirmationChanged(false)">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                @ConfirmationMessage
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                        @onclick="() => OnConfirmationChanged(false)">Cancel</button>
+                <button type="button" class="btn btn-danger" @onclick="() => OnConfirmationChanged(true)">Delete</button>
             </div>
         </div>
     </div>
+</div>
 }
