--- a/EmployeeManagement.Web/Shared/NavMenu.razor
+++ b/EmployeeManagement.Web/Shared/NavMenu.razor
@@ -25,6 +25,12 @@
             </NavLink>
         </li>
 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/Identity/Account/Login" Match="NavLinkMatch.All">
+                <span class="oi oi-lock-locked" aria-hidden="true"></span> Login
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
